# Klerno-Labs

./: .editorconfig  .env.example  .flake8  .flake8_reload_trigger  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  ADDITIONS_MINIMAL.md  ADVANCED_OPTIMIZATION_COMPLETE.md  API_DOCUMENTATION_INTEGRATION_GUIDE.md  APPLICATION_HEALTH_REPORT.md  CHANGES_FOR_DEV.md  CI_ANALYSIS.md  CI_TRIAGE.md  CLEANUP_ANALYSIS.md  CLEAN_DEPLOYMENT_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  CRITICAL_ISSUES_RESOLVED.md  DEPLOYMENT.md  DESIGN_CRITIQUE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_NOTES.md  DEVOPS_ITERATION_REPORT.md  DEVOPS_SUMMARY.md  Dockerfile  Dockerfile.production  Dockerfile.robust  ENHANCED_RESILIENCE_INTEGRATION_GUIDE.md  ENTERPRISE_OVERVIEW.md  ENTERPRISE_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  (+303 more)
.artifacts/: bandit_report.json  collect_errors.ps1  extract_migrations.ps1  fetch_result.txt  latest_completed_run.txt  poll_fetcher.ps1  poll_fetcher_fixed.ps1  poll_result.txt  poll_run_output.txt  run-18114183610-jobs.json  run-18114806621-artifacts.json  run-18115192049-failures.txt  run-marker.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
alembic/: env.py
app/: __init__.py  _typing_shims.py  admin.py  admin_manager.py  admin_routes.py  advanced_ai_risk.py  advanced_caching.py  advanced_monitoring.py  advanced_security.py  advanced_security_hardening.py  ai_agent.py  ai_endpoints.py  analytics.py  analytics_dashboard.py  audit_logger.py  auth.py  auth_enhanced.py  auth_oauth.py  auth_sso.py  authz.py  community.py  compliance.py  compliance_reporting.py  comprehensive_testing.py  config.py  constants.py  crypto_iso20022_integration.py  csp.py  custom_dashboards.py  deps.py  enterprise_analytics_reporting.py  enterprise_cicd_pipeline.py  enterprise_config.py  enterprise_database_async.py  enterprise_error_handling.py  enterprise_features.py  enterprise_health_dashboard.py  enterprise_integration.py  enterprise_integration_hub.py  enterprise_monitoring.py  (+57 more)
archive/: README.md  app_ai_agent.py  app_auth_sso.py  app_integrations_bscscan.py  live.html
automation/: ci-cd-pipeline.yml  conservative_candidates.json  inventory_app_imports.json  inventory_app_imports.py  inventory_app_imports_from_grep.py
data/: api_key.secret  enterprise_performance_report.json  enterprise_test_report.json  sample_visualization_data.json
deployment/: backup.sh  blue_green_deploy.sh  deploy.sh  restore.sh
docs/: DEPLOY_RUNBOOK.md  DEV_AUTH.md  ENTERPRISE_OVERVIEW.md  ENTERPRISE_SUMMARY.md  ENTERPRISE_TRANSFORMATION_COMPLETE.md  NEON_DATA_API_DIAG.md  OPTIMIZATION_COMPLETE_SUMMARY.md  PRODUCTION_VALIDATION_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEPLOYMENT.md  SECURITY_IMPLEMENTATION.md  SECURITY_ISSUES_RESOLVED.md  SECURITY_MONITORING_INTEGRATION_GUIDE.md  XRPL_INTEGRATION.md  XRPL_INTEGRATION_DETAILED.md  XRPL_STATUS.md  api-error-contract.md  api-reference.md  architecture.md  deployment.md  developer-guide.md  render-deployment.md  security_integration_guide.md  security_testing_guide.md
integrations/: __init__.py  bsc.py  bscscan.py  py.typed  xrp.py
k8s/: deployment.yaml  service.yaml
launch/: analytics_strategy.md  brand_strategy.md  community_strategy.md  marketing_emails.md  seo_strategy.md  social_posts.md  viral_content_strategy.md
optimizations/: compression_middleware.py  connection_pooling.py  performance_monitoring.py  response_caching.py
performance/: async_optimization.py  caching.py  database.py  middleware.py
pymemcache/: __init__.py
scripts/: __init__.py  bootstrap_admin.py  check_environment.ps1  check_imports.py  check_imports_script.py  check_prod_readiness.py  check_top_level_imports.py  ci_smoke.py  cleanup-empty-files.ps1  cleanup_tmpdbs.py  db_sanity_check.py  deploy.bat  diagnose_artifacts.ps1  download-chartjs.ps1  fetch_alembic_artifact.ps1  init_db_if_needed.py  inspect_routes.py  lint-static-urls.ps1  list_and_fetch.ps1  manage_subscriptions.py  neon_diag.py  poll_artifacts.ps1  poll_ci.ps1  poll_continuous.ps1  poll_loop.ps1  poll_single_run.ps1  poll_until_artifact.ps1  render-diagnostic.py  run_local.py  run_server_and_http_smoke.py  run_tests.py  set-neon-api-key.ps1  smoke_test.py  smoke_test_endpoints.py  smoke_test_http.ps1  start_local.ps1  test-neon-rest.ps1  vendor_apply_sql_migration.py  wsl-install.ps1  wsl-set-password.ps1  (+2 more)
security_implementations/: auth_framework.py  input_validation.py  rate_limiting.py  security_config.py  security_middleware.py
src/: create_pr.ts
static/: manifest.json  offline.html  og-image.txt  sw.js
templates/: 404.html  500.html  admin-access.html  admin.html  admin_dashboard.html  alerts.html  base.html  dashboard.html  developer_viewer.html  forgot-password.html  healthcheck.html  help.html  iso_dashboard.html  landing-clean.html  landing-professional.html  landing.html  login.html  login_enhanced.html  maintenance.html  paywall.html  paywall_professional.html  premium_dashboard.html  privacy.html  realtime_dashboard.html  signup.html  signup_enhanced.html  terms.html  wallet_management.html
terraform/: main.tf
tests/: __init__.py  conftest.py  test_additional_routes.py  test_admin_access.py  test_ai_endpoints.py  test_analytics.py  test_api.py  test_api_edge_cases.py  test_audit_auth.py  test_auth_flow.py  test_auth_form_and_cookie.py  test_auth_login_form.py  test_canonical_compliance.py  test_canonical_no_high_amount.py  test_check_prod_readiness.py  test_compliance.py  test_crypto_iso.py  test_extreme_stress.py  test_favicon_and_static.py  test_guardian.py  test_health.py  test_imports.py  test_integration.py  test_integration_comprehensive.py  test_integrations_aliasing.py  test_iso20022.py  test_iso_endpoints.py  test_iso_parsers.py  test_landing_assets.py  test_landing_regression.py  test_metrics.py  test_models.py  test_neon_optional_live.py  test_neon_token_status.py  test_onboarding.py  (+22 more)
(+222 files in other folders)
